# csc597-courseproject

./: Dockerfile  LICENSE  Makefile  PYTORCH_DIAGNOSTICS.md  README.md  pyproject.toml
report/: polyfuzz_integration.md
scripts/: multi_trial.py  run_mock.py  run_pytorch.py
seeds/mock/: seed_conv_im2col_small.py  seed_conv_nhwc.py  seed_matmul_blocked.py  seed_matmul_fp16_tc.py  seed_matmul_fp32.py  seed_pointwise_float.py  seed_pointwise_int.py  seed_reduce_lastdim.py  seed_reduce_tree.py
seeds/pytorch/: seed_conv2d.py  seed_linear_relu_sum.py  seed_matmul_add.py  seed_pointwise_dtype_cast.py  seed_reduce_sum.py
src/polyfuzz/: __init__.py  fuzzer.py  target.py
src/polyfuzz/corpus/: __init__.py  corpus.py  seed.py
src/polyfuzz/coverage/: __init__.py  branch_state.py  branch_vars.py  c_branch_vars.py  cpp_cov.py  python_cov.py  unified.py
src/polyfuzz/harness/: __init__.py  runner.py  seed_bootstrap.py
src/polyfuzz/mutators/: __init__.py  mutators.py
src/polyfuzz/oracle/: __init__.py  oracle.py
tests/: test_branch_vars.py  test_corpus.py  test_oracle.py  test_unified_bitmap.py
