[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyfuzz"
version = "0.1.0"
description = "Coverage-guided fuzzing across the Python/C language boundary."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PolyFuzz Authors" }]
license = { text = "MIT" }
dependencies = [
    "coverage>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["polyfuzz*"]
